--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@meforma/vue-toaster": "^1.3.0",
+    "axios": "^1.5.0",
     "perfect-scrollbar": "^1.5.5",
     "vue": "^3.3.4",
     "vue-router": "^4.0.13"
