--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@meforma/vue-toaster": "^1.3.0",
     "axios": "^1.6.1",
+    "jquery": "^3.7.1",
     "perfect-scrollbar": "^1.5.5",
     "vue": "^3.3.4",
     "vue-router": "^4.0.13",
@@ -19,6 +20,6 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
     "sass": "^1.69.5",
-    "vite": "^5.0.4"
+    "vite": "^4.4.5"
   }
 }
